gitops/cluster-apps/avelin/sync/sync-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: avelin-sync
  namespace: avelin
  labels:
    app: avelin-sync
spec:
  selector:
    app: avelin-sync
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
