gitops/cluster-apps/avelin/sync/sync-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: avelin-sync
spec:
  parentRefs:
    - kind: Gateway
      name: avelin-gateway
      namespace: infra
  hostnames:
    - sync.avelin.app
  rules:
    - backendRefs:
        - name: avelin-sync
          port: 80
